<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".News">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="5">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btExitNews"
                android:text="@string/exit"
                android:textSize="13.5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btGroupsNews"
                android:text="@string/groups"
                android:textSize="13.5dp"/>
            
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btStarsNews"
                android:text="@string/stars"
                android:textSize="13.5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btFriendsNews"
                android:text="@string/friends"
                android:textSize="13.5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/btSettingsNews"
                android:text="@string/settings"
                android:textSize="13.5dp"/>

        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:id="@+id/lvNewsList"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>