<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="100"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:id="@+id/btExitNews"
                android:text="@string/exit"
                android:textSize="13dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:id="@+id/btGroupsNews"
                android:text="@string/groups"
                android:textSize="13dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:id="@+id/btStarsNews"
                android:text="@string/stars"
                android:textSize="13dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:id="@+id/btFriendsNews"
                android:text="@string/friends"
                android:textSize="13dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:id="@+id/btSettingsNews"
                android:text="@string/settings"
                android:textSize="13dp"/>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:id="@+id/lvFriendNews"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:id="@+id/lvGroupNews"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>