<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:id="@+id/etUserNameCreateUser"
                android:hint="@string/user_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:id="@+id/etPasswordCreateUser"
                android:hint="@string/password"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:id="@+id/etSecondlyPasswordCreateUser"
                android:hint="@string/secondly_password"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:id="@+id/etGmailCreateUser"
                android:hint="@string/gmail"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:id="@+id/etPhoneNumberCreateUser"
                android:hint="@string/phoneNumber"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:id="@+id/btCreateUserCreateUser"
                android:text="@string/create_user"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>